--- a/cycle-it/pom.xml
+++ b/cycle-it/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <artifactId>camunda-cycle-root</artifactId>
     <groupId>org.camunda.bpm.cycle</groupId>
-    <version>7.2.0-SNAPSHOT</version>
+    <artifactId>camunda-cycle-root</artifactId>
+    <version>3.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>camunda-cycle-integration-tests</artifactId>
@@ -30,6 +30,7 @@
     <dependency>
       <groupId>org.jboss.spec</groupId>
       <artifactId>jboss-javaee-6.0</artifactId>
+      <version>3.0.2.Final</version>
       <type>pom</type>
       <scope>provided</scope>
       <exclusions>
@@ -70,28 +71,28 @@
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
-      <version>4.2.3</version>
+      <version>${version.apache.httpclient}</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
       <groupId>com.sun.jersey.contribs</groupId>
       <artifactId>jersey-apache-client4</artifactId>
-      <version>1.15</version>
+      <version>${version.jersey}</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
       <groupId>com.sun.jersey</groupId>
       <artifactId>jersey-json</artifactId>
-      <version>1.15</version>
+      <version>${version.jersey}</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
       <groupId>com.sun.jersey.contribs</groupId>
       <artifactId>jersey-multipart</artifactId>
-      <version>1.15</version>
+      <version>${version.jersey}</version>
       <scope>test</scope>
     </dependency>
 
