--- a/pom.xml
+++ b/pom.xml
@@ -1,27 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
+  <!-- camunda BPM parent release pom -->
+  <parent>
+    <groupId>org.camunda</groupId>
+    <artifactId>camunda-release-parent</artifactId>
+    <version>2.5</version>
+    <!-- do not remove empty tag - http://jira.codehaus.org/browse/MNG-4687 -->
+    <relativePath />
+  </parent>
+
   <groupId>org.camunda.bpm.cycle</groupId>
   <artifactId>camunda-cycle-root</artifactId>
+  <version>3.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>camunda BPM - cycle - root</name>
   
-  <parent>
-    <groupId>org.camunda.bpm</groupId>
-    <artifactId>camunda-parent</artifactId>
-    <relativePath>../../parent</relativePath>
-    <version>7.2.0-SNAPSHOT</version>
-  </parent>
-  
   <properties>
     <!-- versions -->
+    <version.thymeleaf>2.0.12</version.thymeleaf>
+    <version.camunda>7.2.0-alpha5</version.camunda>
     <version.springframework>3.1.2.RELEASE</version.springframework>
     <version.hibernate>4.2.0.SP1</version.hibernate>
-    <version.jersey>1.11</version.jersey>
+    <version.jersey>1.15</version.jersey>
     <version.apache.httpclient>4.2.2</version.apache.httpclient>
     <version.saxon>9.1.0.8</version.saxon>
-    <version.cglib>2.2.2</version.cglib>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <version.bouncycastle>1.47</version.bouncycastle>
+    <version.servlet-api>2.5</version.servlet-api>
 
     <!-- database drivers -->
     <version.h2>1.3.168</version.h2>
@@ -47,7 +53,7 @@
       <dependency>
         <groupId>cglib</groupId>
         <artifactId>cglib</artifactId>
-        <version>${version.cglib}</version>
+        <version>2.2.2</version>
       </dependency>
       <dependency>
         <groupId>org.hibernate</groupId>
@@ -79,21 +85,46 @@
         <artifactId>commons-io</artifactId>
         <version>2.1</version>
       </dependency>
+      <dependency>
+        <groupId>javax.mail</groupId>
+        <artifactId>mail</artifactId>
+        <version>1.4.1</version>
+      </dependency>
+      <dependency>
+        <groupId>org.bouncycastle</groupId>
+        <artifactId>bcpg-jdk15on</artifactId>
+        <version>${version.bouncycastle}</version>
+      </dependency>
       <!-- testing -->
       <dependency>
         <groupId>junit</groupId>
-        <artifactId>junit-dep</artifactId>
-        <version>4.10</version>
+        <artifactId>junit</artifactId>
+        <version>4.11</version>
+        <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>org.kubek2k</groupId>
         <artifactId>springockito-annotations</artifactId>
         <version>1.0.8</version>
+        <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>org.easytesting</groupId>
         <artifactId>fest-assert-core</artifactId>
         <version>2.0M10</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.camunda.bpm</groupId>
+        <artifactId>camunda-engine</artifactId>
+        <version>${version.camunda}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.subethamail</groupId>
+        <artifactId>subethasmtp-wiser</artifactId>
+        <version>1.2</version>
+        <scope>test</scope>
       </dependency>
       <!-- spring framework -->
       <dependency>
@@ -181,13 +212,28 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
-  
-  <!-- 
-    We need this repository to fetch the ancient libraries
 
-      org.tigris.subversion:svnclientadapter:0.9.100
-      org.xnap.commons:gettext-commons:0.9.6
-  -->
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <configuration>
+            <redirectTestOutputToFile>true</redirectTestOutputToFile>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <configuration>
+            <redirectTestOutputToFile>true</redirectTestOutputToFile>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
+
   <repositories>
     <repository>
       <id>camunda public</id>
