--- a/pom.xml
+++ b/pom.xml
@@ -241,4 +241,11 @@
       <url>https://app.camunda.com/nexus/content/groups/public/</url>
     </repository>
   </repositories>
+
+  <scm>
+    <url>https://github.com/camunda/camunda-cycle</url>
+    <connection>scm:git:git@github.com:camunda/camunda-cycle.git</connection>
+    <developerConnection>scm:git:git@github.com:camunda/camunda-cycle.git</developerConnection>
+    <tag>HEAD</tag>
+  </scm>
 </project>
