--- a/pom.xml
+++ b/pom.xml
@@ -238,7 +238,7 @@
     <repository>
       <id>camunda public</id>
       <name>camunda</name>
-      <url>https://app.camunda.com/nexus/content/groups/public/</url>
+      <url>https://artifacts.camunda.com/artifactory/public/</url>
     </repository>
   </repositories>
 
